<?xml version="1.0"?>
<package format="2">
  <name>kd_noise_publisher</name>
  <version>0.0.0</version>
  <description>The kd_noise_publisher package</description>

  <maintainer email="you@yourdomain.tld">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
    <cpp langs="cpp" />
  </export>

</package>
